@@ -4,19 +4,15 @@ import com.camilocuenca.inventorysystem.dto.user.UserRegisterDTO;
 import com.camilocuenca.inventorysystem.model.User;
 import com.camilocuenca.inventorysystem.service.serviceInterface.UserService;
 import jakarta.validation.Valid;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.Authentication;
 import org.springframework.validation.BindingResult;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/admin")
@@ -30,17 +26,17 @@ public class AdminUserController {
 
     @PostMapping("/users")
     @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<?> registerUser(@Valid @RequestBody UserRegisterDTO registerDTO, BindingResult bindingResult, Authentication authentication) {
+    public ResponseEntity<?> registerUser(@Valid @RequestBody UserRegisterDTO registerDTO, BindingResult bindingResult) {
         if (bindingResult.hasErrors()) {
             var errors = bindingResult.getFieldErrors()
                     .stream()
                     .map(fe -> fe.getField() + ": " + fe.getDefaultMessage())
-                    .collect(Collectors.toList());
+                    .toList();
             return ResponseEntity.badRequest().body(Map.of("errors", errors));
         }
 
         try {
-            // opcional: puedes usar 'authentication' para registrar quién crea el usuario
+            // opcional: puedes usar claims del JWT (si deseas registrar quién crea el usuario)
             User created = userService.register(registerDTO);
 
             Map<String, Object> resp = new HashMap<>();
@@ -60,6 +56,54 @@ public class AdminUserController {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", msg));
             }
             return ResponseEntity.badRequest().body(Map.of("error", msg));
+        }
+    }
+
+    @GetMapping("/users")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> listUsers(Pageable pageable) {
+        try {
+            var page = userService.listUsers(pageable);
+            return ResponseEntity.ok(page);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", e.getMessage()));
+        }
+    }
+
+    @GetMapping("/users/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> getUserById(@PathVariable java.util.UUID id) {
+        try {
+            var dto = userService.getUserById(id);
+            return ResponseEntity.ok(dto);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
+        }
+    }
+
+    @PutMapping("/users/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> updateUser(@PathVariable java.util.UUID id, @Valid @RequestBody com.camilocuenca.inventorysystem.dto.user.UserUpdateDTO dto, BindingResult bindingResult) {
+        if (bindingResult.hasErrors()) return ResponseEntity.badRequest().body(Map.of("errors", bindingResult.getFieldErrors().stream().map(fe -> fe.getField() + ": " + fe.getDefaultMessage()).toList()));
+        try {
+            // Ensure path id matches body id
+            if (!id.equals(dto.id())) return ResponseEntity.badRequest().body(Map.of("error", "ID en path y body no coinciden"));
+            var updated = userService.updateUser(dto);
+            return ResponseEntity.ok(updated);
+        } catch (Exception e) {
+            String msg = e.getMessage() != null ? e.getMessage() : "Error al actualizar usuario";
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("error", msg));
+        }
+    }
+
+    @DeleteMapping("/users/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> deleteUser(@PathVariable java.util.UUID id) {
+        try {
+            userService.deleteUser(id);
+            return ResponseEntity.noContent().build();
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
         }
     }
 }
